# meshbool

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  main.zng
cpp/: CMakeLists.txt  README.md  main.cpp
cpp/bindings/c/: CMakeLists.txt  box.cpp  conv.cpp  conv.h  cross.cpp  manifoldc.cpp  meshIOc.cpp  rect.cpp
cpp/bindings/python/: manifold3d.cpp
cpp/bindings/wasm/: bindings.cpp  helpers.cpp
cpp/extras/: convert_file.cpp  large_scene_test.cpp  minimize_testcase.cpp  perf_test.cpp
cpp/extras/ember_tests/: man_bench.cpp
cpp/include/manifold/: common.h  linalg.h  manifold.h  meshIO.h  optional_assert.h  polygon.h  ross_section.h  vec_view.h
cpp/include/meshbool/: common.h  cross_section.h  manifold.h  meshIO.h  polygon.h  vec_view.h  vec_wrapper.h
cpp/manifold_wrapper/: bindings  extras  samples  test
cpp/manifold_wrapper/src/: tri_dist.h  utils.h
cpp/src/: cross_section.cpp
cpp/test/: boolean_complex_test.cpp  boolean_test.cpp  cross_section_test.cpp  hull_test.cpp  manifold_fuzz.cpp  manifold_test.cpp  manifoldc_test.cpp  polygon_fuzz.cpp  polygon_test.cpp  properties_test.cpp  rust_utils.h  samples_test.cpp  sdf_test.cpp  smooth_test.cpp  test.h  test_main.cpp
crates/meshbool/: Cargo.toml
crates/meshbool-cpp/: Cargo.toml  build.rs
src/: boolean3.rs  boolean_result.rs  collider.rs  common.rs  constructors.rs  disjoint_sets.rs  edge_op.rs  face_op.rs  impl.rs  lib.rs  mesh_fixes.rs  meshboolimpl.rs  parallel.rs  polygon.rs  properties.rs  shared.rs  smoothing.rs  sort.rs  subdivision.rs  tree2d.rs  tri_dis.rs  utils.rs  vec.rs
(+21 files in other folders)
