[package]
name = "meshbool"
version = "0.0.0"
edition = "2024"

[lib]
name = "meshbool"
crate-type = ["staticlib", "cdylib"]

[features]
default = []
zngur = [ "dep:zngur" ]

[dependencies]
nalgebra = { version = "0.34", default-features = false, features = ["std"] }
num-traits = "0.2.19"

[build-dependencies]
# zngur = { version = "0.7", optional = true }
zngur = { git = "https://github.com/HKalbasi/zngur.git", rev = "1d994a819dfdc26f3492b522bd29745e6e33a305", optional = true }
build-rs = { version = "0.3.2"}
