[package]
name = "meshbool"
version = "0.0.0"
edition = "2024"

[lib]
name = "meshbool"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
zngur = [ "dep:zngur" ]

[dependencies]
rayon = "1.11.0"
nalgebra = { version = "0.34", default-features = false, features = ["std"] }

[build-dependencies]
# zngur = { version = "0.7", optional = true }
zngur = { git = "https://github.com/HKalbasi/zngur.git", rev = "0765d1ba9a6395528406576dfee33142f318b1d5", optional = true }
build-rs = { version = "0.3.2"}
